syntax = "proto3";

package tesseral.frontend.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message Project {
  string id = 1;
  string display_name = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  bool log_in_with_google = 6;
  bool log_in_with_microsoft = 7;
  bool log_in_with_github = 13;
  bool log_in_with_email = 11;
  bool log_in_with_password = 5;
  bool log_in_with_saml = 12;
  bool log_in_with_authenticator_app = 9;
  bool log_in_with_passkey = 10;
  string vault_domain = 8;
  bool api_keys_enabled = 14;
  string api_key_secret_token_prefix = 15;
}

message Organization {
  string id = 1;
  string display_name = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  optional bool log_in_with_google = 7;
  optional bool log_in_with_microsoft = 8;
  optional bool log_in_with_github = 18;
  optional bool log_in_with_email = 16;
  optional bool log_in_with_password = 6;
  optional bool log_in_with_saml = 12;
  optional bool log_in_with_authenticator_app = 13;
  optional bool log_in_with_passkey = 14;
  optional bool require_mfa = 15;
  repeated string google_hosted_domains = 9;
  repeated string microsoft_tenant_ids = 10;
  bool saml_enabled = 11;
  bool scim_enabled = 20;
  bool custom_roles_enabled = 17;
  bool api_keys_enabled = 19;
}

message OrganizationGoogleHostedDomains {
  repeated string google_hosted_domains = 2;
}

message OrganizationMicrosoftTenantIDs {
  repeated string microsoft_tenant_ids = 2;
}

message SessionSigningKey {
  string id = 1;
  google.protobuf.Struct public_key_jwk = 2;
}

message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  optional bool owner = 5;
  string google_user_id = 6;
  string microsoft_user_id = 7;
  string github_user_id = 11;
  bool has_authenticator_app = 8;
  optional string display_name = 9;
  optional string profile_picture_url = 10;
}

message Session {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp expire_time = 4;
  bool revoked = 5;
  PrimaryAuthFactor primary_auth_factor = 6;
}

enum PrimaryAuthFactor {
  PRIMARY_AUTH_FACTOR_UNSPECIFIED = 0;
  PRIMARY_AUTH_FACTOR_EMAIL = 1;
  PRIMARY_AUTH_FACTOR_GOOGLE = 2;
  PRIMARY_AUTH_FACTOR_MICROSOFT = 3;
  PRIMARY_AUTH_FACTOR_SAML = 4;
  PRIMARY_AUTH_FACTOR_IMPERSONATION = 5;
}

message SAMLConnection {
  string id = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  optional bool primary = 4;
  string sp_acs_url = 5;
  string sp_entity_id = 6;
  string idp_redirect_url = 7;
  string idp_x509_certificate = 8;
  string idp_entity_id = 9;
}

message SCIMAPIKey {
  string id = 1;
  string display_name = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  string secret_token = 5;
  bool revoked = 6;
}

message Passkey {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
  bool disabled = 8;
  bytes credential_id = 5;
  string public_key_pkix = 6;
  string aaguid = 7;
  string rp_id = 9;
}

message UserInvite {
  string id = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  string email = 4;
  bool owner = 5;
}

message SwitchableOrganization {
  string id = 1;
  string display_name = 2;
}

// RBACPolicy represents a Project's configuration for Role-Based Access Control
// (RBAC).
message RBACPolicy {
  // The set of valid Actions for this Project.
  repeated Action actions = 1;
}

// Action represents a permission within a Project.
message Action {
  // The unique name of the Action.
  string name = 1;

  // A human-readable description of the Action.
  string description = 2;
}

// Role represents a logical grouping of permissions that Users may have.
message Role {
  // The Role ID. Starts with `role_...`.
  string id = 1;

  // The Organization this Role belongs to, if any.
  string organization_id = 2;

  // When the Role was created.
  google.protobuf.Timestamp create_time = 3;

  // When the Role was last updated.
  google.protobuf.Timestamp update_time = 4;

  // A human-readable display name for this Role.
  string display_name = 5;

  // A human-readable description of the Role.
  string description = 6;

  // The names of the Actions associated with this Role.
  repeated string actions = 7;
}

// UserRoleAssignment represents a User being assigned to a Role.
message UserRoleAssignment {
  // The User Role Assignment ID. Starts with `user_role_assignment_...`.
  string id = 1;

  // The User ID.
  string user_id = 2;

  // The Role ID.
  string role_id = 3;
}

message APIKey {
  // The API Key ID. Starts with `api_key_...`.
  string id = 1;
  // The Organization this API Key belongs to.
  string organization_id = 2;
  // When the API Key was created.
  google.protobuf.Timestamp create_time = 3;
  // When the API Key was last updated.
  google.protobuf.Timestamp update_time = 4;
  // The expire time of the API Key.
  optional google.protobuf.Timestamp expire_time = 5;
  // A human-readable display name for this API Key.
  string display_name = 6;
  // The secret token for this API Key.
  string secret_token = 7;
  // The secret token suffix for this API Key.
  string secret_token_suffix = 8;
  // Whether this API Key is revoked.
  bool revoked = 9;
}

message APIKeyRoleAssignment {
  // The API Key Role Assignment ID. Starts with `api_key_role_assignment_...`.
  string id = 1;
  // The API Key ID.
  string api_key_id = 2;
  // The Role
  string role_id = 3;
}
